Fix rendering of Runic on Windows

Fix font fallback logic for Runic by removing USCRIPT_RUNIC from the win
specific symbol and emoji font selection logic, instead using the script
map to determine the appropriate Runic fonts based on the unicode block.

BUG=607528
R=szager@chromium.org

Review-Url: https://codereview.chromium.org/1958213002
Cr-Commit-Position: refs/heads/master@{#392495}

Former-commit-id: aca021a3bd4f6f479d5449ea4cd6e1b295b08d8f